# cpp_projects

./: LICENSE  README.md  version.cpp
a_trading_platform/: README.md
fasta_file_processor/: README.md  main.cpp  result.txt  sequences.fasta
learn_cmake/: CMakeLists.txt  README.md  main.cpp
learn_cmake/src/: string_utils.cpp  string_utils.h
learn_oop/: CMakeLists.txt  READEME.md
learn_oop/include/: Animal.h  Cat.h  Dog.h
learn_oop/src/: Animal.cpp  Cat.cpp  Dog.cpp  main.cpp
luyencode.net/: cb01.cpp  cb02.cpp  cb03.cpp  cb04.cpp  cb05.cpp  cb06.cpp
marisaoj.com/level_0/: complex_multiplication.cpp  divide.cpp  hello_marisa.cpp
rosalind_problems/DNA/: main.cpp  rosalind_dna.txt
the_nucleotide_counter/: main.cpp
